Chapter 13/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway  
metadata:
  name: my-gateway
spec:
  gatewayClassName: lattice-gw
  listeners:
  - name: lattice-listener
    port: 80
    protocol: HTTP
    routes:
      backends:
      - conditions:
        - prefix: /
        services:
        - name: my-service
          port: 80
