Chapter 13/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-foo  
spec:
  podSelector:
    matchLabels:
      app: foo  
  policyTypes:
    - Ingress
    - Egress
  ingress: 
    - from:
      - podSelector: 
          matchLabels:
            app: foo
